--- a/pages/index.css
+++ b/pages/index.css
@@ -32,3 +32,18 @@
 @import url(../blocks/table/__heading/_theme/table__heading_theme_dark.css);
 @import url(../blocks/table/__text/_theme/table__text_theme_dark.css);  
 @import url(../blocks/table/table_theme_dark.css);  
+@import url(../blocks/resources/resources.css); 
+@import url(../blocks/resources/__link/resources__link.css); 
+@import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__columns/footer__columns.css); 
+@import url(../blocks/footer/__column/_content/footer__column_content_copyright.css);
+@import url(../blocks/logo/__place_footer/logo__place_footer.css);
+@import url(../blocks/footer/__column/_content/footer__column_content_info.css);
+@import url(../blocks/footer/__column-heading/footer__column-heading.css);
+@import url(../blocks/footer/__column-link/.footer__column-link.css);
+@import url(../blocks/footer/__column-links/.footer__column-links.css);
+@import url(../blocks/footer/__column-link/footer__column-link-text.css);
+@import url(../blocks/footer/__column-link/footer__column-link-li.css);
+@import url(../blocks/footer/__author/footer__author.css);
+@import url(../blocks/footer/__social-icon/footer__social-icon.css);
