--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,10 +1,7 @@
-.kaufman {
+.video {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
-    background-color: #1f1f1f;
-    position: relative;
-    overflow: hidden;
   }
