--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,7 @@
 @import url(../blocks/two-columns/two_columns.css); 
 @import url(../blocks/two-columns/__brief/two_columns__brief.css); 
 @import url(../blocks/two-columns/__main-text/two_columns__main-text.css); 
+@import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css); 
 @import url(../blocks/two-columns/__main-text/_paragraph/two_columns__main-text_paragraph.css); 
 @import url(../blocks/techniques/techniques.css); 
 @import url(../blocks/section-title/section_title.css); 
