--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,5 @@
-@import url(../root/page.css); 
+@import url(../vendor/normalize.css); 
+@import url(../blocks/page/page.css); 
 @import url(../blocks/header/header.css); 
 @import url(../blocks/logo/__place_header/logo__place_header.css);
 @import url(../blocks/header/__title/header__title.css); 
@@ -65,8 +66,8 @@
 @import url(../blocks/logo/__place_footer/logo__place_footer.css);
 @import url(../blocks/footer/__column/_content/footer__column_content_info.css);
 @import url(../blocks/footer/__column-heading/footer__column-heading.css);
-@import url(../blocks/footer/__column-link/.footer__column-link.css);
-@import url(../blocks/footer/__column-links/.footer__column-links.css);
+@import url(../blocks/footer/__column-link/footer__column-link.css);
+@import url(../blocks/footer/__column-links/footer__column-links.css);
 @import url(../blocks/footer/__column-link/footer__column-link-text.css);
 @import url(../blocks/footer/__column-link/footer__column-link-li.css);
 @import url(../blocks/footer/__author/footer__author.css);
