--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,7 @@
 @import url(../vendor/normalize.css); 
 @import url(../blocks/page/page.css); 
 @import url(../blocks/header/header.css); 
-@import url(../blocks/logo/__place_header/logo__place_header.css);
+@import url(../blocks/logo/_place/logo_place_header.css);
 @import url(../blocks/header/__title/header__title.css); 
 @import url(../blocks/header/__subtitle/header__subtitle.css);   
 @import url(../blocks/header/__link/header__link.css);   
@@ -28,10 +28,10 @@
 @import url(../blocks/oakley/oakley.css); 
 @import url(../blocks/feynman/feynman.css); 
 @import url(../blocks/feynman/__content/feynman__content.css); 
-@import url(../blocks/feynman/__content/__title/feynman__title.css); 
-@import url(../blocks/feynman/__content/__subtitle/feynman__subtitle.css); 
-@import url(../blocks/feynman/__content/__link/feynman__link.css); 
-@import url(../blocks/feynman/__content/__main-illustration/feynman__main-illustration.css); 
+@import url(../blocks/feynman/__title/feynman__title.css); 
+@import url(../blocks/feynman/__subtitle/feynman__subtitle.css); 
+@import url(../blocks/feynman/__link/feynman__link.css); 
+@import url(../blocks/feynman/__main-illustration/feynman__main-illustration.css); 
 @import url(../blocks/digits/digits.css); 
 @import url(../blocks/table/table.css); 
 @import url(../blocks/table/__cell/table__cell.css); 
@@ -51,24 +51,24 @@
 @import url(../blocks/kaufman/kaufman.css);  
 @import url(../blocks/section-title/section_title_theme_dark.css);  
 @import url(../blocks/section-subtitle/section_subtitle_theme_dark.css);  
-@import url(../blocks/table/table_theme_dark.css);  
+@import url(../blocks/table/_theme/table_theme_dark.css);  
 @import url(../blocks/kaufman/__triangle/kaufman__triangle.css); 
 @import url(../blocks/table/__cell/_theme/table__cell_theme_dark.css);  
 @import url(../blocks/table/__heading/_theme/table__heading_theme_dark.css);
 @import url(../blocks/table/__text/_theme/table__text_theme_dark.css);  
-@import url(../blocks/table/table_theme_dark.css);  
+@import url(../blocks/table/_theme/table_theme_dark.css  
 @import url(../blocks/resources/resources.css); 
 @import url(../blocks/resources/__link/resources__link.css); 
 @import url(../blocks/resources/__logo-zone/resources__logo-zone.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__columns/footer__columns.css); 
 @import url(../blocks/footer/__column/_content/footer__column_content_copyright.css);
-@import url(../blocks/logo/__place_footer/logo__place_footer.css);
+@import url(../blocks/logo/_place/logo_place_footer.css);
 @import url(../blocks/footer/__column/_content/footer__column_content_info.css);
 @import url(../blocks/footer/__column-heading/footer__column-heading.css);
 @import url(../blocks/footer/__column-link/footer__column-link.css);
 @import url(../blocks/footer/__column-links/footer__column-links.css);
-@import url(../blocks/footer/__column-link/footer__column-link-text.css);
+@import url(../blocks/footer/__column-link-text/footer__column-link-text.css);
 @import url(../blocks/footer/__column-link/footer__column-link-li.css);
 @import url(../blocks/footer/__author/footer__author.css);
 @import url(../blocks/footer/__social-icon/footer__social-icon.css);
