--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -4,5 +4,5 @@
     justify-content: center;
     background-color: #f2f2f2;
     position: relative;
-    height: 890px;
+    min-height: 890px;
   }
