--- a/blocks/footer/__column-link-text/footer__column-link-text.css
+++ b/blocks/footer/__column-link-text/footer__column-link-text.css
@@ -5,4 +5,9 @@
     color: #f2f2f2;
     text-decoration:none;
     margin: 0;
+    transition: .5s ease-in-out;
+  }
+
+  .footer__column-link-text:hover {
+    opacity: .6;
   }
