--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,7 @@
-footer {
+.footer {
     background-color: #1f1f1f;
     display: flex;
     flex-direction: row;
     margin: 0 auto;
-    height: 350px;
+    min-height: 350px;
   }
