--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,4 +1,9 @@
 .header__link {
   color: #2f80ed; 
   text-decoration:none;
+  transition: .5s ease-in-out;
+}
+
+.header__link:hover {
+  opacity: .6;
 }
