--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -5,4 +5,7 @@
     justify-content: start;
     flex-wrap: wrap;
     width: 920px;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
   }
