--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -2,7 +2,10 @@
     margin: 0 0 10px;
     display: flex;
     flex-direction: row;
-    transition: .5s ease-in-out;
+    transition: .5s ease-in-out;    
+    text-decoration:none;
+    padding: 0;
+    color: white; 
   }
 
   .footer__column-link:hover {
