--- a/blocks/footer/__column/_content/footer__column_content_info.css
+++ b/blocks/footer/__column/_content/footer__column_content_info.css
@@ -2,4 +2,7 @@
     color: white;
     display: flex;
     flex-direction: column;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
   }
