--- a/blocks/footer/__column/_content/footer__column_content_social.css
+++ b/blocks/footer/__column/_content/footer__column_content_social.css
@@ -2,4 +2,7 @@
     display: flex;
     flex-direction: column;
     color: white;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
   }
