--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,7 +1,9 @@
 .kaufman__triangle {
+background-image: url("../../../images/kaufman-triangle.svg");
 width: 877px;
 height: 877px;
 position: absolute;
 right: -210px;
 top: 0;
+background-size: cover;
 }
