--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,13 +1,15 @@
-.khan__book-container_buy-link {
+.khan__buy-link {
     line-height: 42px;
     font-size: 30px;
     font-weight: normal;
     color: #2f80ed; 
     text-decoration:none;
+    padding: 0;
+    margin: 0;
     transition: .5s ease-in-out;
     align-self: flex-start;
 }
 
-.khan__book-container_buy-link:hover {
+.khan__buy-link:hover {
     opacity: .6;
 }
