--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -6,4 +6,7 @@
     justify-content: space-between;
     margin: 0 auto 100px;
     flex-wrap: wrap;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
   }
