--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -1,12 +1,8 @@
-.two_columns__main-text_paragraph {
+.two-columns__paragraph {
     margin-top: 0;
     margin-bottom: 30px;
     font-size: 24px;
     line-height: 34px;
     font-weight: normal;
     text-align: start;
-  }
-
-  .two_columns__main-text_paragraph:last-of-type {
-    margin-bottom: 0;
   }
