--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,7 +1,6 @@
 .video__iframe {
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    top: 50px;
-    margin: 0 auto 0;
+    margin-right: 20px;
+    width: 515px;
+    height: 316px;
+    border: 0;
 }
