--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,5 +1,7 @@
 .khan__book-pic {
-    width: 608px;
-    height: 620px;
+    width: 620px;
+    height: 608px;
     margin: 0 48px 0 0;
+    object-fit: cover;
+    object-position: top;
 }
