--- a/blocks/table/__heading/table__heading.css
+++ b/blocks/table/__heading/table__heading.css
@@ -1,4 +1,7 @@
 .table__heading {
     text-align: start;
-    margin: 0 0 20px;
+    margin: 0;
+    font-size: 24px;
+    line-height: 1.15;
+    font-weight: 600;
   }
