--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-@import url(../vendor/normalize.css..); 
+@import url(../vendor/normalize.css); 
 @import url(../blocks/page/page.css); 
 @import url(../blocks/header/header.css); 
 @import url(../blocks/logo/_place/logo_place_header.css);
