--- a/pages/index.css
+++ b/pages/index.css
@@ -4,7 +4,7 @@
 @import url(../blocks/logo/_place/logo_place_header.css);
 @import url(../blocks/header/__title/header__title.css); 
 @import url(../blocks/header/__subtitle/header__subtitle.css);   
-@import url(../blocks/header/__link/header__link.css);   
+@import url(.././blocks/header/__link/header__link.css);   
 @import url(../blocks/header/__main-illustration/header__main-illustration.css);  
 @import url(../blocks/header/__square-pic/header__square-pic.css); 
 @import url(../blocks/rotation/rotation.css);
